--- a/index.html
+++ b/index.html
@@ -6,3 +6,8 @@
             window.location.href = '';
          }, 10000);
       </script>
+<style>
+body {
+  background-image: url('untitled.png');
+}
+</style>
